<?xml version="1.0" encoding="utf-8"?><!--
/* apps/common/assets/default/default/skins/StatusBar.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<!--    android:background="@drawable/status_bar_closed_default_background" -->
<com.android.systemui.statusbar.phone.PhoneStatusBarView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui"
    xmlns:sysui="http://schemas.android.com/apk/res-auto"
    android:id="@+id/status_bar"
    android:descendantFocusability="afterDescendants"
    android:focusable="false"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/notification_lights_out"
        android:layout_width="@dimen/status_bar_icon_size"
        android:layout_height="match_parent"
        android:paddingBottom="2dip"
        android:paddingStart="6dip"
        android:scaleType="center"
        android:src="@drawable/ic_sysbar_lights_out_dot_small"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/status_bar_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/head_linear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:orientation="horizontal">

            <com.android.systemui.statusbar.policy.KeyButtonView
                android:id="@+id/home"
                android:layout_width="@dimen/private_status_bar_home_width"
                android:layout_height="@dimen/private_status_bar_home_height"
                android:layout_marginLeft="32px"
                android:contentDescription="@string/accessibility_home"
                android:src="@drawable/statusbar_icon_home"
                sysui:keyCode="3"
                sysui:keyRepeat="false" />

            <TextView
                android:id="@+id/app_title"
                android:layout_width="200px"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:singleLine="true"
                android:text="@string/app_title"
                android:textColor="#ffffff" />

            <com.android.systemui.statusbar.AlphaOptimizedFrameLayout
                android:id="@+id/notification_icon_area"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">
                <!-- The alpha of this area is both controlled from PhoneStatusBarTransitions and
                     PhoneStatusBar (DISABLE_NOTIFICATION_ICONS), so we need two views here. -->
                <com.android.keyguard.AlphaOptimizedLinearLayout
                    android:id="@+id/notification_icon_area_inner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <com.android.systemui.statusbar.StatusBarIconView
                        android:id="@+id/moreIcon"
                        android:layout_width="@dimen/status_bar_icon_size"
                        android:layout_height="match_parent"
                        android:src="@drawable/stat_notify_more"
                        android:visibility="gone" />

                    <com.android.systemui.statusbar.phone.IconMerger
                        android:id="@+id/notificationIcons"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" />
                </com.android.keyguard.AlphaOptimizedLinearLayout>
            </com.android.systemui.statusbar.AlphaOptimizedFrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_linear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <com.android.systemui.statusbar.policy.Clock
                android:id="@+id/clock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.StatusBar.Clock"
                sysui:amPmStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_linear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:orientation="horizontal">

            <com.android.systemui.statusbar.AlphaOptimizedFrameLayout
                android:id="@+id/notification_icon_area"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"></com.android.systemui.statusbar.AlphaOptimizedFrameLayout>


            <com.android.keyguard.AlphaOptimizedLinearLayout
                android:id="@+id/system_icon_area"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/private_status_bar_statusicons_height"
                android:layout_marginTop="12px"
                android:orientation="horizontal">

                <include layout="@layout/system_icons" />
            </com.android.keyguard.AlphaOptimizedLinearLayout>

            <com.android.systemui.statusbar.policy.KeyButtonView
                android:id="@+id/recent_apps007"
                android:layout_width="@dimen/private_status_bar_home_width"
                android:layout_height="@dimen/private_status_bar_home_height"
                android:contentDescription="@string/accessibility_recent"
                android:src="@drawable/ic_sysbar_recent"
                android:visibility="visible" />

            <Button
                android:id="@+id/close_screen"
                android:layout_width="@dimen/private_status_bar_home_width"
                android:layout_height="@dimen/private_status_bar_home_height"
                android:background="@drawable/close_brightness"
                android:visibility="visible" />

            <com.android.systemui.statusbar.policy.KeyButtonView
                android:id="@+id/back"
                android:layout_width="@dimen/private_status_bar_home_width"
                android:layout_height="@dimen/private_status_bar_home_height"
                android:contentDescription="@string/accessibility_back"
                android:src="@drawable/statusbar_icon_home_exit_d"
                android:visibility="visible"
                sysui:keyCode="4" />

        </LinearLayout>

    </LinearLayout>

</com.android.systemui.statusbar.phone.PhoneStatusBarView>
